; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_buf.c_xfs_buf_ioacct_inc.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_buf.c_xfs_buf_ioacct_inc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_buf = type { i32, i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@XBF_NO_IOACCT = common dso_local global i32 0, align 4
@XBF_ASYNC = common dso_local global i32 0, align 4
@XFS_BSTATE_IN_FLIGHT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xfs_buf*)* @xfs_buf_ioacct_inc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xfs_buf_ioacct_inc(%struct.xfs_buf* %0) #0 {
  %2 = alloca %struct.xfs_buf*, align 8
  store %struct.xfs_buf* %0, %struct.xfs_buf** %2, align 8
  %3 = load %struct.xfs_buf*, %struct.xfs_buf** %2, align 8
  %4 = getelementptr inbounds %struct.xfs_buf, %struct.xfs_buf* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = load i32, i32* @XBF_NO_IOACCT, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %41

10:                                               ; preds = %1
  %11 = load %struct.xfs_buf*, %struct.xfs_buf** %2, align 8
  %12 = getelementptr inbounds %struct.xfs_buf, %struct.xfs_buf* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @XBF_ASYNC, align 4
  %15 = and i32 %13, %14
  %16 = call i32 @ASSERT(i32 %15)
  %17 = load %struct.xfs_buf*, %struct.xfs_buf** %2, align 8
  %18 = getelementptr inbounds %struct.xfs_buf, %struct.xfs_buf* %17, i32 0, i32 2
  %19 = call i32 @spin_lock(i32* %18)
  %20 = load %struct.xfs_buf*, %struct.xfs_buf** %2, align 8
  %21 = getelementptr inbounds %struct.xfs_buf, %struct.xfs_buf* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @XFS_BSTATE_IN_FLIGHT, align 4
  %24 = and i32 %22, %23
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %37, label %26

26:                                               ; preds = %10
  %27 = load i32, i32* @XFS_BSTATE_IN_FLIGHT, align 4
  %28 = load %struct.xfs_buf*, %struct.xfs_buf** %2, align 8
  %29 = getelementptr inbounds %struct.xfs_buf, %struct.xfs_buf* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = or i32 %30, %27
  store i32 %31, i32* %29, align 4
  %32 = load %struct.xfs_buf*, %struct.xfs_buf** %2, align 8
  %33 = getelementptr inbounds %struct.xfs_buf, %struct.xfs_buf* %32, i32 0, i32 3
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = call i32 @percpu_counter_inc(i32* %35)
  br label %37

37:                                               ; preds = %26, %10
  %38 = load %struct.xfs_buf*, %struct.xfs_buf** %2, align 8
  %39 = getelementptr inbounds %struct.xfs_buf, %struct.xfs_buf* %38, i32 0, i32 2
  %40 = call i32 @spin_unlock(i32* %39)
  br label %41

41:                                               ; preds = %37, %9
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @percpu_counter_inc(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
